@@ -26,6 +26,7 @@ SYNOPSIS
             # massive calculation that will be parallelized, so that
             # $maxProcs different processes are calculating sqrt
             # simultaneously for different values of $_ on different CPUs
+            # (Do see 'Performance and properties of the loop body' below)
 
             $returnValues{$_} = sqrt($_);
         });
@@ -194,6 +195,20 @@ Exception/Error Handling / Dying
     Also, be sure not to call exit() in the child. That will just exit the
     child and that doesn't work. Right now, exit just makes the parent fail
     no-so-nicely. Patches to this that handle exit somehow are welcome.
+
+Performance and properties of the loop body
+    Keep in mind that a child process is forked every time while or foreach
+    calls the provided sub. For use of Parallel::Loops to make sense, each
+    invocation needs to actually do some serious work for the performance
+    gain of parallel execution to outweigh the overhead of forking and
+    communicating between the processes. So while sqrt() in the example
+    above is simple, it will actually be slower than just running it in a
+    standard foreach loop because of the overhead.
+
+    Also, if each loop sub returns a massive amount of data, this needs to
+    be communicated back to the parent process, and again that could
+    outweigh parallel performance gains unless the loop body does some heavy
+    work too.
 
 SEE ALSO
     This module uses fork(). ithreads could have been possible too, but was
